--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "This repository contains a sample code that uses the node-fetch package of node JS to make a post request to the API and return the results.",
   "main": "node-fetch-sample-API-call.js",
   "dependencies": {
-    "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "node-fetch": "^2.6.0"
@@ -22,5 +21,6 @@
   "bugs": {
     "url": "https://github.com/Terance98/node-fetch-API-call-boilerplate/issues"
   },
-  "homepage": "https://github.com/Terance98/node-fetch-API-call-boilerplate#readme"
+  "homepage": "https://github.com/Terance98/node-fetch-API-call-boilerplate#readme",
+  "keywords": []
 }
